--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -23,16 +23,34 @@ Vagrant.configure("2") do |config|
   # Configure second network
   config.vm.network "private_network", ip:"192.168.167.173" # EUREKAAA!!!
 
-  # Copy public key from notebook
+  # Copy public key from notebook to vm
   config.vm.provision "file", source: "/Users/falvarez/.ssh/id_rsa.pub", destination: "$HOME/.ssh/public_notebook_key"
 
+  # Copy the docker-compose file to vm
+  config.vm.provision "file", source: "docker-compose.yml", destination: "$HOME/"
+
+  # Copy the Puppet Remediate Trial license to vm
+  config.vm.provision "file", source: "License-puppet-remediate-trial.json", destination: "$HOME/"
+
   # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.
+  # Puppet, Chef, Ansible, Salt, and Docker are also available.
   config.vm.provision "shell", inline: <<-SHELL
     cat /home/vagrant/.ssh/public_notebook_key >> /home/vagrant/.ssh/authorized_keys
     rm /home/vagrant/.ssh/public_notebook_key -rf
-    #setenforce permissive
-    #yum update -y
+    sudo echo "nameserver 8.8.8.8" > /etc/resolv.conf
+    sudo setenforce permissive
+    #sudo yum -y update
+    sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+    sudo yum -y install docker-ce docker-ce-cli containerd.io
+    sudo systemctl enable docker
+    sudo systemctl start docker
+    sudo curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    sudo chmod +x /usr/local/bin/docker-compose
+
+    # Initialize the swarm
+    sudo docker swarm init
+
+    # Bring up the remediate stack, access by http://IP-VM:8443 user: admin pass: @Admin
+    sudo docker-compose run remediate start --license-file License-puppet-remediate-trial.json
   SHELL
 end
